Fixing nav bar so that its content isnt overlapping to cards

--- a/client/src/components/Navigation/Navigation.module.css
+++ b/client/src/components/Navigation/Navigation.module.css
@@ -6,14 +6,23 @@
 
 .mainNavigation {
   display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  justify-items: end;
+}
+.secondaryNavigation {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-self: end;
 }
 
 .navigationList {
   list-style: none;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  justify-self: center;
+  grid-template-columns: repeat(2, 1fr);
+  justify-self: start;
 }
 
 .navigationItem {
